--- a/local.yml
+++ b/local.yml
@@ -1,7 +1,6 @@
 ---
-- hosts: all
+- hosts: local
   connection: local 
-  become: yes
   gather_facts: false
   vars:
 
@@ -19,9 +18,22 @@
 
     repo_url: git@github.com:magnusducatuslt/ansible-pull.git
   tasks:
-    - include: tasks/cron.yaml
+    - include_tasks: tasks/cron.yaml
 
     - name: "Execute"
       shell: "echo 1"
       register: output
     - debug: var=output.stdout_lines
+
+    - name: Tear down existing services
+      community.docker.docker_compose:
+        project_src: "./"
+        state: absent
+      register: "output"
+      when: "'{{gitresult.before}}' != '{{gitresult.after}}'"
+
+    - name: Create and start services
+      community.docker.docker_compose:
+        project_src: ./
+      register: output
+    
