--- a/tasks/cron.yaml
+++ b/tasks/cron.yaml
@@ -1,6 +1,6 @@
 - name: install cronjob
   cron:
-    user: "{{cron_user}}"
+    user: "ansible"
     name: "ansible"
     minute: "*/1"
-    job: "/opt/homebrew/bin/ansible-pull -o -U {{repo_url}} -i hosts --key-file ~.ssh/github >>{{ logfile }} 2>&1"
+    job: "/opt/homebrew/bin/ansible-pull -o -U {{repo_url}} -i hosts --key-file ~.ssh/github --user magnusducatuslt >>{{ logfile }} 2>&1"
