--- a/tasks/cron.yaml
+++ b/tasks/cron.yaml
@@ -3,4 +3,4 @@
     user: "{{cron_user}}"
     name: "ansible"
     minute: "*/1"
-    job: "/opt/homebrew/bin/ansible-pull -o -U {{repo_url}} -i hosts --key-file ~.ssh/github --user magnusducatuslt >>{{ logfile }} 2>&1"
+    job: "/opt/homebrew/bin/ansible-pull -o -U {{repo_url}} -i hosts --key-file ~/.ssh/github --user magnusducatuslt >>{{ logfile }} 2>&1"
