--- a/local.yml
+++ b/local.yml
@@ -29,6 +29,7 @@
     - name: Stop all services
       community.docker.docker_compose:
         project_src: ./
+        build: false
         stopped: true # Use with state present to stop all containers defined in the Compose file.
       register: output
 
