--- a/local.yml
+++ b/local.yml
@@ -21,22 +21,22 @@
   tasks:
     - include_tasks: tasks/cron.yaml
     # - name: Tear down existing services
-    #   community.docker.docker_compose:
-    #     project_src: "./"
-    #     state: absent # Specifying absent is the same as running docker-compose down.
-    #   register: "output"
-
-    - name: Stop all services
       community.docker.docker_compose:
-        project_src: ./
-        build: false
-        stopped: true # Use with state present to stop all containers defined in the Compose file.
-      register: output
+        project_src: "./"
+        state: absent # Specifying absent is the same as running docker-compose down.
+      register: "output"
+
+    # - name: Stop all services
+    #   community.docker.docker_compose:
+    #     project_src: ./
+    #     build: false
+    #     stopped: true # Use with state present to stop all containers defined in the Compose file.
+    #   register: output
 
     - name: Create and start services
       community.docker.docker_compose:
         project_src: ./ # Path to a directory containing a docker-compose.yml or docker-compose.yaml file.
-        build: true # Use with state present to always build images prior to starting the application.
+        # build: true # Use with state present to always build images prior to starting the application.
       register: output
     
     - ansible.builtin.debug:
