--- a/local.yml
+++ b/local.yml
@@ -20,7 +20,7 @@
     repo_url: git@github.com:magnusducatuslt/ansible-pull.git
   tasks:
     - include_tasks: tasks/cron.yaml
-    # - name: Tear down existing services
+    - name: Tear down existing services
       community.docker.docker_compose:
         project_src: "./"
         state: absent # Specifying absent is the same as running docker-compose down.
