--- a/local.yml
+++ b/local.yml
@@ -30,7 +30,7 @@
       community.docker.docker_compose:
         project_src: ./
         build: false
-        status: absent
+        state: absent
         stopped: true # Use with state present to stop all containers defined in the Compose file.
       register: output
 
