--- a/local.yml
+++ b/local.yml
@@ -20,17 +20,16 @@
     repo_url: git@github.com:magnusducatuslt/ansible-pull.git
   tasks:
     - include_tasks: tasks/cron.yaml
-    # - name: Tear down existing services
-    #   community.docker.docker_compose:
-    #     project_src: "./"
-    #     state: absent # Specifying absent is the same as running docker-compose down.
-    #   register: "output"
+    - name: Tear down existing services
+      community.docker.docker_compose:
+        project_src: "./"
+        state: absent # Specifying absent is the same as running docker-compose down.
+      register: "output"
 
     - name: Stop all services
       community.docker.docker_compose:
         project_src: ./
         build: false
-        state: absent
         stopped: true # Use with state present to stop all containers defined in the Compose file.
       register: output
 
