--- a/local.yml
+++ b/local.yml
@@ -29,12 +29,12 @@
       register: "output"
       timeout: 30 
 
-    - name: Stop all services
-      docker_compose:
-        project_src: ./
-        build: false
-        stopped: true # Use with state present to stop all containers defined in the Compose file.
-      register: output 
+    # - name: Stop all services
+    #   docker_compose:
+    #     project_src: ./
+    #     build: false
+    #     stopped: true # Use with state present to stop all containers defined in the Compose file.
+    #   register: output 
 
     - name: After
       shell: "docker ps"
