--- a/local.yml
+++ b/local.yml
@@ -22,12 +22,12 @@
     
 
     - include_tasks: tasks/cron.yaml
-    - name: Tear down existing services
-      docker_compose:
-        project_src: "./"
-        state: absent # Specifying absent is the same as running docker-compose down.
-      register: "output"
-      timeout: 30 
+    # - name: Tear down existing services
+    #   docker_compose:
+    #     project_src: "./"
+    #     state: absent # Specifying absent is the same as running docker-compose down.
+    #   register: "output"
+    #   timeout: 30 
 
     # - name: Stop all services
     #   docker_compose:
