--- a/tasks/cron.yaml
+++ b/tasks/cron.yaml
@@ -2,5 +2,5 @@
   cron:
     user: "{{cron_user}}"
     name: "ansible"
-    minute: "2"
+    minute: "*/1"
     job: "/opt/homebrew/bin/ansible-pull -o -U {{repo_url}} -i hosts --key-file /Users/magnusducatuslt/.ssh/github --user magnusducatuslt >>{{ logfile }} 2>&1"
