--- a/local.yml
+++ b/local.yml
@@ -35,11 +35,11 @@
     #     build: false
     #     stopped: true # Use with state present to stop all containers defined in the Compose file.
     #   register: output 
-    - name: After
-      shell: "docker ps"
-      register: logs2
-    - debug:
-        var: logs2.stdout_lines
+    # - name: After
+    #   shell: "docker ps"
+    #   register: logs2
+    # - debug:
+    #     var: logs2.stdout_lines
     - name: Create and start services
       docker_compose:
         nocache: true
