--- a/local.yml
+++ b/local.yml
@@ -4,10 +4,6 @@
   become: true
   gather_facts: false
   vars:
-
-    # schedule is fed directly to cron
-    schedule: '* * * * *'
-
     # User to run ansible-pull as from cron
     cron_user: root
 
@@ -19,28 +15,6 @@
 
     repo_url: git@github.com:magnusducatuslt/ansible-pull.git
   tasks:
-    
-
     - include_tasks: tasks/cron.yaml
-    - name: Tear down existing services
-      docker_compose:
-        project_src: "{{workdir}}"
-        state: absent # Specifying absent is the same as running docker-compose down.
-      register: "output"
-      timeout: 30 
-
-    - name: Stop all services
-      docker_compose:
-        project_src: "{{workdir}}"
-        build: false
-        stopped: true # Use with state present to stop all containers defined in the Compose file.
-      register: output 
-    
-    - name: Create and start services
-      docker_compose:
-        project_src: "{{workdir}}" # Path to a directory containing a docker-compose.yml or docker-compose.yaml file.
-        build: true # Use with state present to always build images prior to starting the application.
-      register: output
-
-    - debug:
-        var: output.stdout_lines
+    - include_tasks: tasks/docker.yaml
+   
