--- a/local.yml
+++ b/local.yml
@@ -15,6 +15,10 @@
 
     repo_url: git@github.com:magnusducatuslt/ansible-pull.git
   tasks:
+    - name: Create user
+      user:
+        name: ansible
+        system: yes 
     - include_tasks: tasks/cron.yaml
     - include_tasks: tasks/docker.yaml
    
