--- a/local.yml
+++ b/local.yml
@@ -20,7 +20,8 @@
         system: yes
     - name: Allow the bob user to run any commands as alice with sudo -u alice
       community.general.sudoers:
-        name: ansible-do-as-root
+        name: ansible
+        nopassword: true
         state: present
         user: "{{cron_user}}"
         commands: ALL 
