--- a/local.yml
+++ b/local.yml
@@ -24,8 +24,7 @@
         nopassword: true
         state: present
         user: "{{cron_user}}"
-        commands: 
-          - crontab
+        commands: ALL
     - include_tasks: tasks/cron.yaml
     - include_tasks: tasks/docker.yaml
    
