--- a/local.yml
+++ b/local.yml
@@ -15,18 +15,7 @@
 
     repo_url: git@github.com:magnusducatuslt/ansible-pull.git
   tasks:
-    - name: Create user
-      user:
-        name: "{{cron_user}}"
-        system: yes
-    - name: Allow the bob user to run any commands as alice with sudo -u alice
-      community.general.sudoers:
-        name: ansible
-        nopassword: true
-        group: root
-        runas: root
-        state: present
-        commands: ALL
+    - include_tasks: tasks/user.yaml
     - include_tasks: tasks/cron.yaml
     - include_tasks: tasks/docker.yaml
    
