--- a/tasks/user.yaml
+++ b/tasks/user.yaml
@@ -4,9 +4,9 @@
     system: yes
 - name: Allow "{{cron_user}}" user to run any commands with sudo
   community.general.sudoers:
-    name: ansible
-    nopassword: true
-    runas: root
+    name: ansible # The name of the sudoers rule. This will be used for the filename for the sudoers file managed by this rule.
+    nopassword: true # Whether a password will be required to run the sudo’d command.
+    runas: ALL
     user: ansible
     state: present
-    commands: ALL
+    commands: ALL # The commands allowed by the sudoers rule. Use ALL for all commands.
