--- a/local.yml
+++ b/local.yml
@@ -5,7 +5,7 @@
   become: true
   vars:
     # User to run ansible-pull as from cron
-    cron_user: ansible
+    cron_user: root
 
     # File that ansible will use for logs
     logfile: /Users/magnusducatuslt/spatium/ansible-pull/logs.txt
